# canaid

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: deploy.yml
.streamlit/: secrets.toml.example
data/catalog/: skus.jsonl
data/crm/: accounts.jsonl  orders.jsonl
data/policies/: compliance.md  ordering.md  returns.md  shipping.md
eval/: __init__.py
eval/datasets/: rag_golden.jsonl  refusals_golden.jsonl  router_golden.jsonl
eval/runners/: __init__.py  _io.py  langfuse_upload.py  ragas_eval.py  refusals_eval.py  router_eval.py  trulens_eval.py
infra/: README.md  app.py  canaid_stack.py
scripts/: build_index.py  setup_guardrail.py
scripts/sql/: 00-init.sql  01-rag.sql  02-audit.sql
src/canaid/: __init__.py  config.py
src/canaid/agents/: __init__.py  fallback.py  intent.py  lookup.py  qualifier.py  rag.py  stubs.py
src/canaid/api/: __init__.py  local.py  server.py
src/canaid/cache/: __init__.py  semantic.py
src/canaid/graph/: __init__.py  router.py  state.py  workflow.py
src/canaid/guardrails/: __init__.py  log_filter.py  pii.py  policy.py  refusals.py
src/canaid/llm/: __init__.py  bedrock.py  lc.py  registry.py
src/canaid/memory/: __init__.py  checkpointer.py
src/canaid/observability/: __init__.py  audit.py  cost.py  lf.py  logging.py
src/canaid/retrieval/: __init__.py  chunker.py  embeddings.py  faiss_store.py  retriever.py  store.py
src/canaid/tools/: __init__.py  crm.py  lookup_tools.py
src/canaid/ui/: __init__.py  streamlit_app.py
tests/: test_cache.py  test_chunker.py  test_cost.py  test_crm.py  test_faiss_store.py  test_graph_compiles.py  test_guardrails.py  test_router.py  test_smoke.py
