[project]
name = "canaid"
version = "0.1.0"
description = "Multi-agent contact-center chatbot for B2B healthcare supply chain — harness-engineering showcase."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Ashish Gupta" }]

# Phase 1 runtime dependencies. RAG / eval / infra deps live in optional
# groups so we can install them per phase without bloating the base image.
dependencies = [
    "boto3>=1.35",
    "botocore>=1.35",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "tenacity>=9.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "streamlit>=1.39",
    # LangChain / LangGraph land in Phase 2 but they're light, pin now so the
    # lockfile stabilizes early.
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-aws>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint>=2.0",
    # Observability — wired up incrementally from Phase 8.
    "langfuse>=2.50",
    "langchain-text-splitters>=0.3",
    # Caching + memory (Phase 6)
    "redis[hiredis]>=5.1",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
    # Embedded / single-process deploy (FAISS replaces pgvector for the
    # Streamlit Community Cloud target). Moved out of `[embedded]` extra
    # so `uv sync` + Streamlit Cloud's uv-sync build install them by
    # default — without them the chunker can't import on cold start.
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
rag = [
    # Production-store extras: pgvector via psycopg + OpenSearch client.
    # The chunker / text-splitters / tiktoken / faiss / numpy moved to base
    # because the embedded deploy needs them on every install.
    "pgvector>=0.3",
    "opensearch-py>=2.7",
]
eval = [
    "ragas>=0.2",
    "trulens>=1.0",
    "datasets>=3.0",
    "pandas>=2.2",
]
guardrails = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
infra = [
    "aws-cdk-lib>=2.150",
    "constructs>=10.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canaid"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "PTH"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
