[project]
name = "canaid"
version = "0.1.0"
description = "Multi-agent contact-center chatbot for B2B healthcare supply chain — harness-engineering showcase."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Ashish Gupta" }]

# Phase 1 runtime dependencies. RAG / eval / infra deps live in optional
# groups so we can install them per phase without bloating the base image.
dependencies = [
    # Streamlit Cloud build pulls these from uv.lock. Keep base lean — every
    # heavy package not strictly needed for the embedded chat path went to
    # extras to lower memory pressure on Streamlit Cloud's 1 GB free tier.
    # Streamlit pin: <1.55 sticks with the Tornado-based server; 1.55+ moved
    # to Uvicorn and we hit a click-rerun WebSocket failure on Streamlit Cloud.
    "streamlit>=1.39,<1.50",

    "boto3>=1.35",
    "botocore>=1.35",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "tenacity>=9.0",
    "httpx>=0.27",

    # LangChain / LangGraph
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-aws>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint>=2.0",
    "langchain-text-splitters>=0.3",

    # Observability
    "langfuse>=2.50",

    # Embedded retrieval (FAISS in-memory; required on Streamlit Cloud)
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
api = [
    # FastAPI / SSE — only needed when running the API sidecar locally or
    # on AWS. NOT needed for Streamlit Cloud (embedded) deploy.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
]
rag = [
    # Production-store extras: pgvector + Postgres + OpenSearch.
    "pgvector>=0.3",
    "opensearch-py>=2.7",
    "psycopg[binary,pool]>=3.2",
]
prod = [
    # Production cache + checkpointer. Embedded deploy uses in-memory
    # equivalents (dict-with-TTL + MemorySaver), no extra deps needed.
    "redis[hiredis]>=5.1",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
]
eval = [
    "ragas>=0.2",
    "trulens>=1.0",
    "datasets>=3.0",
    "pandas>=2.2",
]
guardrails = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
infra = [
    "aws-cdk-lib>=2.150",
    "constructs>=10.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canaid"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "PTH"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
